test/pass/basic_syntax/complex_apply.lly
define f(a: integer) : integer
{
    var v = [1, 2, "1", [1, 2] ]
    v[0]
    v[1]
    return a
}

[1, 2, 3].apply(f)
