test/fail/basic_syntax/reject_userland_scoop.lly
#[
SyntaxError: Expected 'a label', not 'an integer'.
    from reject_userland_scoop.lly:6:
]#

define test: 0 {}
